# ai-customer-service-bot

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  .tflint.hcl  .yamllint.yml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.codacy/: codacy.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  lambda-test.yml
docs/: CONTRIBUTING.md
docs/adr/: 001-repository-structure.md  002-uv-dependency-management.md  template.md
lambda/functions/bedrock-handler/: README.md  pyproject.toml
lambda/functions/bedrock-handler/src/: __init__.py  handler.py
lambda/functions/bedrock-handler/tests/: test_handler.py
lambda/functions/context-builder/: README.md  pyproject.toml
lambda/functions/context-builder/src/: __init__.py  handler.py
lambda/functions/context-builder/tests/: test_handler.py
lambda/functions/escalation-router/: README.md  pyproject.toml
lambda/functions/escalation-router/src/: __init__.py  handler.py
lambda/functions/escalation-router/tests/: test_handler.py
lambda/functions/intent-classifier/: README.md  pyproject.toml
lambda/functions/intent-classifier/src/: __init__.py  handler.py
lambda/functions/intent-classifier/tests/: test_handler.py
lambda/functions/metrics-publisher/: README.md  pyproject.toml
lambda/functions/metrics-publisher/src/: __init__.py  handler.py
lambda/functions/metrics-publisher/tests/: test_handler.py
lambda/functions/response-validator/: README.md  pyproject.toml
lambda/functions/response-validator/src/: __init__.py  handler.py
lambda/functions/response-validator/tests/: test_handler.py
lambda/layers/common/: pyproject.toml  requirements.txt
lambda/layers/common/python/shared/: __init__.py  cache_client.py  config.py  exceptions.py  logger.py  metrics.py  tracing.py  types.py  utils.py
scripts/: comprehensive_fix.sh  disable_github_actions.sh  fix_lambda_types.sh  lambda_scaffold.sh  lint-lambdas.sh  package-lambda.sh  setup.sh  test-lambdas.sh  update_lambda_pyprojects.sh
terraform/backend_bootstrap/: README.md  main.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/environments/dev/: README.md  backend.tf  main.tf  variables.tf  versions.tf
terraform/modules/networking/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
terraform/modules/observability/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/observability/files/: heartbeat.js
