[project]
name = "ai-customer-service-bot"
version = "0.1.0"
description = "AI-powered customer service platform"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.34",
    "aws-lambda-powertools>=2.31.0",
    "pydantic>=2.5.3",
    "requests>=2.31.0",
    "jinja2>=3.1.3",
    "tenacity>=8.2.3",
    "redis>=5.0.1",
    "opensearch-py>=2.4.2",
    "requests-aws4auth>=1.2.3",
    "python-dateutil>=2.8.2",
    "pre-commit>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.3",
    "moto>=5.0.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "pylint>=3.0.3",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    "boto3-stubs[essential]>=1.34.34",
    "types-requests>=2.31.0.20240125",
    "locust>=2.20.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests", "lambda"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# UV Workspace Configuration
[tool.uv.workspace]
members = [
    "lambda/functions/intent-classifier",
    "lambda/functions/context-builder",
    "lambda/functions/bedrock-handler",
    "lambda/functions/response-validator",
    "lambda/functions/escalation-router",
    "lambda/functions/metrics-publisher",
]


# Ruff configuration

[tool.ruff]
# Same as Black's default line length
line-length = 100
target-version = "py312"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults (useful for FastAPI/Pydantic)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Configure isort-compatible import sorting
known-first-party = ["shared"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in test files
"tests/**/*.py" = [
    "S101",  # Allow assert statements in tests
]
"**/test_*.py" = [
    "S101",  # Allow assert statements in tests
]

[tool.ruff.format]
# Use double quotes (same as Black default)
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing comma (same as Black)
skip-magic-trailing-comma = false

# Format docstrings
docstring-code-format = true
